# actix-jwt-authc

./: Cargo.toml  LICENSE  Makefile  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yaml  rustdoc.yaml
actix_jwt_authc/: all.html  enum.Error.html  enum.InvalidatedTokens.html  enum.InvalidatedTokensEvent.html  enum.MaybeAuthenticated.html  index.html  sidebar-items.js  struct.AuthenticateMiddleware.html  struct.AuthenticateMiddlewareFactory.html  struct.AuthenticateMiddlewareSettings.html  struct.Authenticated.html  struct.ErrorResponse.html  struct.InvalidatedTokensTag.html  struct.JWT.html  struct.JWTSessionKey.html  trait.InvalidatedJWTsReader.html
actix_jwt_authc/authentication/: enum.InvalidatedTokens.html  enum.InvalidatedTokensEvent.html  enum.MaybeAuthenticated.html  struct.AuthenticateMiddleware.html  struct.AuthenticateMiddlewareFactory.html  struct.AuthenticateMiddlewareSettings.html  struct.Authenticated.html  struct.InvalidatedTokensTag.html  struct.JWT.html  struct.JWTSessionKey.html  trait.InvalidatedJWTsReader.html
actix_jwt_authc/errors/: enum.Error.html  struct.ErrorResponse.html
examples/: inmemory.rs
implementors/actix_service/: trait.Service.js
implementors/actix_service/transform/: trait.Transform.js
implementors/actix_web/extract/: trait.FromRequest.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
src/: authentication.rs  errors.rs  lib.rs
src/actix_jwt_authc/: authentication.rs.html  errors.rs.html  lib.rs.html
(+16 files in other folders)
